<resources>
    <string name="app_name">MovistarTAyuda</string>
    <string name="bandejaChat">Bandeja</string>
    <string name="msgCerrarSesion">Cerrar Sesión</string>
    <string name="msgNotificaciones">Notificaciones</string>
    <string name="msgFiltrarFecha">Filtrar Fecha</string>

    <string name="msgDescargas">Descargas</string>
    <string name="msgComentar">Comentar</string>
    <string name="msgGuiasdeUso">Guias de Uso</string>
    <string name="msgArchivoBaseErrores">Archivo Base Errores</string>
    <string name="msgTest">Test</string>
    <string name="msgNuevoChat">Nuevo Chat</string>
    <string name="newAdd">Nuevo</string>
    <string name="msgAdjuntar">Adjuntar</string>
    <string name="msgGoMenu">GoMenu</string>
    <string name="action_search">Buscar</string>
    <string name="action_delete">Eliminar</string>
    <string name="search_hint">Nro Ticket, Tipo, Nro Consulta</string>

    <string name="linkweb">\n Cambio de Dirección +Simple, click en link <a href="https://movistartayuda.com/web_chat/pedidos_offline.php">Aquí</a> \n
Para interacción Chat On line, click en botón "Omitir" </string>
</resources>
