<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
     >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="100"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/action_search"
        app:showAsAction="always" />

    <item android:id="@+id/action_RangoFechas"
        android:title="@string/msgFiltrarFecha"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:visible="false"/>

    <item android:id="@+id/action_Notificaciones"
        android:title="@string/msgNotificaciones"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_CerrarSesion"
        android:title="@string/msgCerrarSesion"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
